force-app/main/default/objects/PardotCattrMediaCodeSync__e/PardotCattrMediaCodeSync__e.object-meta.xml
<CustomObject>
    <description>Platform event for syncing campaign attribution (Cattr) and media code values in Pardot through form handler callouts</description>
    <label>PardotCattrMediaCodeSync</label>
    <pluralLabel>PardotCattrMediaCodesSync</pluralLabel>
</CustomObject>