force-app/main/default/objects/PardotCattrMediaCodeSync__e/fields/Cattr__c.field-meta.xml
<CustomField>
    <fullName>Cattr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campaign Attribution</description>
    <label>Cattr</label>
    <type>Checkbox</type>
</CustomField>