force-app/main/default/objects/PardotCattrMediaCodeSync__e/fields/Media_Code__c.field-meta.xml
<CustomField>
    <fullName>Media_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Media Code</description>
    <label>Media Code</label>
    <type>Checkbox</type>
</CustomField>